Working on swagger Docs(a).
